# otls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_notary.sh  compile_otls.sh  compile_tls_server.sh  install.sh
.github/workflows/: arm.yml  x86.yml
backend/: backend.h  bn_utils.h  check_zero.h  commitment.h  offline_hg_eva.h  offline_hg_gen.h  offline_pado_eva.h  offline_pado_gen.h  offline_primus_eva.h  offline_primus_gen.h  offline_primus_party.h  ole.h  ole_f2k.h  online_hg_eva.h  online_hg_gen.h  online_pado_eva.h  online_pado_gen.h  online_primus_eva.h  online_primus_gen.h  opt_hg_eva.h  opt_hg_gen.h  pado_eva.h  pado_gen.h  primus_eva.h  primus_gen.h  primus_party.h  switch.cpp  switch.h  upstream_gc.h  vope.h
certs/: ca.crt  ca.key  config.cfg  gen.sh  server.crt  server.csr  server.key
cipher/: aesgcm.h  hmac_sha256.h  prf.h  sha256.h  utils.cpp  utils.h
compat/: primus_compat.h
emp-compat/: README.md
emp-compat/include/emp-tool/io/: io_channel.h  net_io_channel.h
handshake/: handshake.h
io_test/: echo_server.cpp  emcompile.sh  io_channel.h  net_io_channel.h  nginx.conf  test_emp.cpp
mpc_tls/: CMakeLists.txt  emp_io_channel.h  mpc_tls.cpp  mpc_tls.h  mpc_tls_meth.h  my_proxy.cpp  my_proxy.h  proxy_client.cpp  websocket_io_channel.h  ws.cpp  ws.h
mpc_tls/src/: CMakeLists.txt  mpc_tls.cpp  mpc_tls.h
mpc_tls/test/: CMakeLists.txt  otls_client.cpp  otls_pado.cpp
mpc_tls_test/: CMakeLists.txt  binance.crt  ca.crt  ca.csr  ca.key  ca.srl  ca2.crt  client  client.cpp  client.crt  client.csr  client.key  client_ca.crt  client_ca.csr  client_ca.key  client_ca.srl  compile.sh  emcompile.sh  gen.sh  gen2.sh  kucoin.crt  myrootcert.crt  myrootcert.csr  myrootcert.key  myrootcert.srl  okx.crt  os.cpp  pado  pado.cpp  privkey.pem  root.crt  root.csr  root.key  root.srl  server  server.cpp  server.crt  server.csr  server.key  test_crypto.cpp  (+2 more)
mpc_tls_test/demoCA/private/: cakey.pem
notary/src/: CMakeLists.txt  notary.cpp
notary/test/: CMakeLists.txt  client.cpp  server.cpp
protocol/: addmod.h  aead.h  aead_izk.h  com_conv.h  e2f.h  handshake.h  post_record.h  prove_aes.h  prove_prf.h  record.h  tls_labels.h
pssl/: compile.sh
pssl/crypto/: init.c
pssl/crypto/ec/: ecdh_ossl.c
pssl/crypto/evp/: e_aes.c
pssl/crypto/kdf/: tls1_prf.c
pssl/crypto/modes/: gcm128.c
pssl/include/openssl/: mpc_tls_meth.h
pssl/ssl/: t1_enc.c
pssl/ssl/statem/: statem_clnt.c
pssl/util/: libcrypto.num
scripts/: _config.sh  compile.sh  compile_wasm.sh
test/: CMakeLists.txt  addmod.cpp  aead.cpp  aead_izk.cpp  aead_on_off.cpp  aes.cpp  block.cpp  check_prf.cpp  check_zero.cpp  circuit_file.cpp  com_conv.cpp  commitment.cpp  compare.cpp  e2f.cpp  example.cpp  handshake.cpp  handshake_on_off.cpp  hmac.cpp  int.cpp  io_utils.h  ole.cpp  ole_f2k.cpp  online_offline.cpp  onoffperf.cpp  parse.cpp  perf.cpp  post_record.cpp  prf.cpp  prf_on_off.cpp  prot_on_off.cpp  protocol.cpp  prove_aes.cpp  prove_prf.cpp  prove_proxy_tls.cpp  rounds.cpp  switch.cpp  vope.cpp
tls_server/: .gitignore  CMakeLists.txt  compile.sh  server.cpp
websocket_test/: binance_client.cpp  client.cpp  compile.sh  https_client.cpp  server.cpp  websocket_client.cpp  websocket_server.cpp  wss.cpp  wss.h  wss_client.cpp  wss_server.cpp
